--- a/Gene Expression v02.ipynb
+++ b/Gene Expression v02.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
        "4              1          8  5.195413"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(471, 18544)\n"
+      "(471, 18543)\n"
      ]
     },
     {
@@ -226,6 +226,7 @@
        "      <th>10006</th>\n",
        "      <th>10007</th>\n",
        "      <th>...</th>\n",
+       "      <th>9989</th>\n",
        "      <th>998</th>\n",
        "      <th>9990</th>\n",
        "      <th>9991</th>\n",
@@ -235,7 +236,6 @@
        "      <th>9997</th>\n",
        "      <th>999</th>\n",
        "      <th>9</th>\n",
-       "      <th>Sites</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -252,6 +252,7 @@
        "      <td>8.543386</td>\n",
        "      <td>10.146590</td>\n",
        "      <td>...</td>\n",
+       "      <td>10.824800</td>\n",
        "      <td>5.366379</td>\n",
        "      <td>6.102796</td>\n",
        "      <td>7.611540</td>\n",
@@ -261,7 +262,6 @@
        "      <td>9.638273</td>\n",
        "      <td>8.372508</td>\n",
        "      <td>7.915253</td>\n",
-       "      <td>urinary_tract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -276,6 +276,7 @@
        "      <td>9.147535</td>\n",
        "      <td>8.564433</td>\n",
        "      <td>...</td>\n",
+       "      <td>8.963671</td>\n",
        "      <td>5.304978</td>\n",
        "      <td>5.231049</td>\n",
        "      <td>8.704089</td>\n",
@@ -285,7 +286,6 @@
        "      <td>10.335640</td>\n",
        "      <td>9.852547</td>\n",
        "      <td>10.535870</td>\n",
-       "      <td>prostate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -300,6 +300,7 @@
        "      <td>8.833257</td>\n",
        "      <td>8.895942</td>\n",
        "      <td>...</td>\n",
+       "      <td>10.669690</td>\n",
        "      <td>6.068712</td>\n",
        "      <td>5.735501</td>\n",
        "      <td>8.380994</td>\n",
@@ -309,7 +310,6 @@
        "      <td>9.305898</td>\n",
        "      <td>4.312173</td>\n",
        "      <td>8.105601</td>\n",
-       "      <td>central_nervous_system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -324,6 +324,7 @@
        "      <td>9.341341</td>\n",
        "      <td>9.578695</td>\n",
        "      <td>...</td>\n",
+       "      <td>10.812790</td>\n",
        "      <td>5.128864</td>\n",
        "      <td>6.746001</td>\n",
        "      <td>8.342509</td>\n",
@@ -333,7 +334,6 @@
        "      <td>8.043184</td>\n",
        "      <td>11.278580</td>\n",
        "      <td>8.478392</td>\n",
-       "      <td>urinary_tract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -348,6 +348,7 @@
        "      <td>9.247934</td>\n",
        "      <td>10.152180</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.648020</td>\n",
        "      <td>4.942413</td>\n",
        "      <td>5.591168</td>\n",
        "      <td>8.207547</td>\n",
@@ -357,46 +358,45 @@
        "      <td>9.801101</td>\n",
        "      <td>4.339788</td>\n",
        "      <td>8.283828</td>\n",
-       "      <td>kidney</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 18544 columns</p>\n",
+       "<p>5 rows × 18543 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Entrez_id  100009676     10000      10001     10002     10003  100048912  \\\n",
-       "3           5.979812  6.595651   9.663415  4.040661  4.159523   4.099417   \n",
-       "7           6.079415  4.521625   8.845639  3.768181  4.044822   4.151676   \n",
-       "10          5.373842  6.631749  10.001350  3.610522  4.242035   3.859894   \n",
-       "15          6.025009  7.510764   9.289334  3.685390  3.656942   4.138587   \n",
-       "16          5.444892  7.544216   8.715909  4.173643  3.663081   4.069507   \n",
+       "Entrez_id  100009676  10000      10001      10002      10003      100048912  \\\n",
+       "3           5.979812   6.595651   9.663415   4.040661   4.159523   4.099417   \n",
+       "7           6.079415   4.521625   8.845639   3.768181   4.044822   4.151676   \n",
+       "10          5.373842   6.631749  10.001350   3.610522   4.242035   3.859894   \n",
+       "15          6.025009   7.510764   9.289334   3.685390   3.656942   4.138587   \n",
+       "16          5.444892   7.544216   8.715909   4.173643   3.663081   4.069507   \n",
        "\n",
-       "Entrez_id     10004     10005     10006      10007           ...            \\\n",
-       "3          4.518963  8.236260  8.543386  10.146590           ...             \n",
-       "7          4.201540  7.922227  9.147535   8.564433           ...             \n",
-       "10         4.561051  8.697279  8.833257   8.895942           ...             \n",
-       "15         4.599801  8.492029  9.341341   9.578695           ...             \n",
-       "16         4.523500  7.735855  9.247934  10.152180           ...             \n",
+       "Entrez_id  10004      10005      10006      10007        ...      9989       \\\n",
+       "3           4.518963   8.236260   8.543386  10.146590    ...      10.824800   \n",
+       "7           4.201540   7.922227   9.147535   8.564433    ...       8.963671   \n",
+       "10          4.561051   8.697279   8.833257   8.895942    ...      10.669690   \n",
+       "15          4.599801   8.492029   9.341341   9.578695    ...      10.812790   \n",
+       "16          4.523500   7.735855   9.247934  10.152180    ...       9.648020   \n",
        "\n",
-       "Entrez_id       998      9990      9991      9992      9993      9994  \\\n",
-       "3          5.366379  6.102796  7.611540  4.590955  7.164869  7.092268   \n",
-       "7          5.304978  5.231049  8.704089  4.505268  6.679857  9.262698   \n",
-       "10         6.068712  5.735501  8.380994  4.505418  6.530644  8.844877   \n",
-       "15         5.128864  6.746001  8.342509  4.533303  6.942694  8.538819   \n",
-       "16         4.942413  5.591168  8.207547  4.719897  6.646730  8.307294   \n",
+       "Entrez_id  998        9990       9991       9992       9993       9994       \\\n",
+       "3           5.366379   6.102796   7.611540   4.590955   7.164869   7.092268   \n",
+       "7           5.304978   5.231049   8.704089   4.505268   6.679857   9.262698   \n",
+       "10          6.068712   5.735501   8.380994   4.505418   6.530644   8.844877   \n",
+       "15          5.128864   6.746001   8.342509   4.533303   6.942694   8.538819   \n",
+       "16          4.942413   5.591168   8.207547   4.719897   6.646730   8.307294   \n",
        "\n",
-       "Entrez_id       9997        999          9                   Sites  \n",
-       "3           9.638273   8.372508   7.915253           urinary_tract  \n",
-       "7          10.335640   9.852547  10.535870                prostate  \n",
-       "10          9.305898   4.312173   8.105601  central_nervous_system  \n",
-       "15          8.043184  11.278580   8.478392           urinary_tract  \n",
-       "16          9.801101   4.339788   8.283828                  kidney  \n",
+       "Entrez_id  9997       999        9          \n",
+       "3           9.638273   8.372508   7.915253  \n",
+       "7          10.335640   9.852547  10.535870  \n",
+       "10          9.305898   4.312173   8.105601  \n",
+       "15          8.043184  11.278580   8.478392  \n",
+       "16          9.801101   4.339788   8.283828  \n",
        "\n",
-       "[5 rows x 18544 columns]"
+       "[5 rows x 18543 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -624,7 +624,7 @@
        "[5 rows x 23174 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -956,7 +956,7 @@
        "4  clear_cell_renal_cell_carcinoma     RPMI001  SNP-matched-reference  3.123  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1202,7 +1202,7 @@
        "[5 rows x 43247 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1272,7 +1272,7 @@
        "16          0.0468  3.989604"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
