--- a/Gene Selection v02.ipynb
+++ b/Gene Selection v02.ipynb
@@ -322,6 +322,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "file_name = \"datasets_498/gene_lst_pd\"\n",
+    "with open(file_name,'wb') as my_file_obj:\n",
+    "    pickle.dump(gene_lst_pd,my_file_obj)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
